[tool.poetry]
name = "telegram-db"
version = "0.1.0"
description = ""
authors = ["barbamento <lorenzo.alvisi@studio.unibo.it>"]
readme = "README.md"
packages = [{include = "telegram_db"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^22.10.0"
seaborn = "^0.12.0"
telepot = "^12.7"
Telethon = "^1.25.4"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

