[tool.poetry]
name = "telegram-analysis"
version = "0.1.0"
description = ""
authors = ["barbamento <lorenzo.alvisi@studio.unibo.it>"]
readme = "README.md"
packages = [{include = "telegram_analysis"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
psycopg2-binary = "^2.9.5"
Telethon = "^1.25.4"
SQLAlchemy = "^1.4.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
